--- a/app/src/main/res/layout/activity_owl_main.xml
+++ b/app/src/main/res/layout/activity_owl_main.xml
@@ -10,14 +10,14 @@
         android:orientation="vertical"
         tools:context=".ui.MainActivity">
 
-        <fragment
-            android:id="@+id/nav_host"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            app:defaultNavHost="true"
-            app:navGraph="@navigation/owl_nav_graph" />
+        <!--        <fragment-->
+        <!--            android:id="@+id/nav_host"-->
+        <!--            android:name="androidx.navigation.fragment.NavHostFragment"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="0dp"-->
+        <!--            android:layout_weight="1"-->
+        <!--            app:defaultNavHost="true"-->
+        <!--            app:navGraph="@navigation/owl_nav_graph" />-->
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_nav"
