--- a/app/src/main/res/layout/activity_movie_details_activity.xml
+++ b/app/src/main/res/layout/activity_movie_details_activity.xml
@@ -445,6 +445,7 @@
                         android:id="@+id/rv_mylike"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:visibility="gone"
                         android:layout_marginTop="@dimen/pixel_10dp"
                         android:layout_marginBottom="100dp"
                         android:nestedScrollingEnabled="false" />
