--- a/onionui/src/main/res/layout/activity_main_show.xml
+++ b/onionui/src/main/res/layout/activity_main_show.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:ignore="HardcodedText,OnClick,UsingOnClickInXml"
-    tools:context=".ShowActivity">
+    tools:context=".MainShowActivity">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
@@ -27,6 +27,15 @@
             android:onClick="showTelegram"
             android:tag="constraint_example_1"
             android:text="Telegrarm"
+            android:textAllCaps="false"
+            app:cornerRadius="@dimen/cardview_default_radius" />
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="showMaterialBuildShow"
+            android:tag="constraint_example_1"
+            android:text="Material Theme Show"
             android:textAllCaps="false"
             app:cornerRadius="@dimen/cardview_default_radius" />
 
