--- a/onionui/src/main/res/layout/constraint_example_1.xml
+++ b/onionui/src/main/res/layout/constraint_example_1.xml
@@ -113,7 +113,7 @@
         app:layout_constraintDimensionRatio="w,1:1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView11"
-        app:srcCompat="@drawable/ic_android_black_24dp" />
+        app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/textView11"
