--- a/app-ui/src/main/res/values/colors.xml
+++ b/app-ui/src/main/res/values/colors.xml
@@ -33,4 +33,16 @@
     <color name="widget_edit_text">#999999</color>
     <color name="ic_background">#F54142</color>
     <color name="ic_background_beta">#747F9F</color>
+
+
+    <!-- Global Color -->
+    <color name="theme_color_primary">#FD484F</color> <!--Color primary-->
+    <color name="theme_color_on_primary">#ffffff</color> <!--Color on primary -->
+    <color name="theme_color_secondary">#EE2A7B</color>
+    <color name="theme_color_background">#F5F5F5</color>
+    <color name="theme_color_assist_blue">#07B1EF</color>
+    <color name="theme_color_assist_green">#01DF85 </color>
+    <color name="text_color_primary">#0C0B0B</color>
+    <color name="text_color_secondary">#B1B3B3</color>
+    <color name="text_color_chat_in">#ffffff</color>
 </resources>
